--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/app-icon.png" />
+    <meta name="application-name" content="React Whiteboard" />
+    <meta name="apple-mobile-web-app-title" content="React Whiteboard" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-project</title>
+    <title>React Whiteboard</title>
   </head>
   <body>
     <div id="root"></div>
